--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^19.2.3",
     "lucide-react": "0.473.0",
     "@google/genai": "^1.38.0",
-    "firebase": "^12.8.0"
+    "firebase": "^12.8.0",
+    "@firebase/auth": "^1.12.0",
+    "@firebase/app": "^0.14.7",
+    "@firebase/firestore": "^4.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
