--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@google/genai": "^1.38.0",
     "@firebase/app": "^0.14.7",
     "@firebase/auth": "^1.12.0",
-    "@firebase/firestore": "^4.10.0"
+    "@firebase/firestore": "^4.10.0",
+    "firebase": "^12.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
