--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "0.473.0",
-    "@google/genai": "^1.38.0",
+    "@google/genai": "1.38.0",
     "firebase": "^12.8.0"
   },
   "devDependencies": {
